# shirabe-sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
src/shirabe/: __init__.py  client.py  langchain.py  openai_agents.py  tools.py
tests/: test_client.py  test_tools.py
