[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shirabe-sdk"
version = "0.1.0"
description = "Official thin SDK for the Shirabe Japan-specific AI-native API platform — composite enrich (address, name, corporate number, calendar) in one call. Zero dependencies."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Techwell Inc.", email = "support@shirabe.dev" }]
keywords = [
    "shirabe",
    "japan",
    "address-normalization",
    "rokuyo",
    "japanese-calendar",
    "corporate-number",
    "enrich",
    "ai",
    "llm",
    "agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://shirabe.dev"
Repository = "https://github.com/techwell-inc-jp/shirabe-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["src/shirabe"]
