[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shirabe-sdk"
version = "0.2.0"
description = "Official thin SDK for the Shirabe Japan-specific AI-native API platform — composite enrich (address, name, corporate number, calendar) in one call, plus ready-made LangChain and OpenAI Agents SDK tools. Zero dependencies in the core."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Techwell Inc.", email = "support@shirabe.dev" }]
keywords = [
    "shirabe",
    "japan",
    "address-normalization",
    "rokuyo",
    "japanese-calendar",
    "corporate-number",
    "enrich",
    "ai",
    "llm",
    "agent",
    "langchain",
    "openai-agents",
    "tools",
    "function-calling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
# dict の args_schema 対応は langchain-core 0.3.40 で verify 済み(0.3.14 は不可)
langchain = ["langchain-core>=0.3.40"]
# FunctionTool の同一 API は 0.1.0 で verify 済み(Python 3.9+)
openai-agents = ["openai-agents>=0.1.0"]

[project.urls]
Homepage = "https://shirabe.dev"
Repository = "https://github.com/techwell-inc-jp/shirabe-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["src/shirabe"]
